# dynamixel_ros2_multi_motor_control

./: CMakeLists.txt  package.xml  readme.md
config/: motor_params.yaml
launch/: dynamixel_hardware_interface.launch.py
scripts/: dummy_script.py  gui.py
src/: cpp_node.cpp  current_node_ex3.cpp  dynamixel_ros2_multi_motor_control.cpp
